<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/Background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">



    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/spl_img" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/aqua_supply"
        android:textColor="@color/aqua"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/anta"
        android:text="@string/sign_up_here"
        android:textColor="@color/brName"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/signupUserName"
        android:layout_width="320dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        app:layout_constraintEnd_toEndOf="@+id/signupName"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="@+id/signupName"
        app:layout_constraintTop_toBottomOf="@+id/signupName" />

    <EditText
        android:id="@+id/signupNumber"
        android:layout_width="320dp"
        android:layout_height="52dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittext"
        android:drawableLeft="@drawable/baseline_phone_24"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:hint="Number"
        android:inputType="number"
        android:paddingLeft="15dp"
        app:layout_constraintEnd_toEndOf="@+id/signupUserName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/signupUserName"
        app:layout_constraintTop_toBottomOf="@+id/signupUserName" />

    <EditText
        android:id="@+id/signupPassword"

        android:layout_width="320dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        app:layout_constraintEnd_toEndOf="@+id/signupNumber"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/signupNumber"
        app:layout_constraintTop_toBottomOf="@+id/signupNumber" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/or"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/signupNumber"
        app:layout_constraintStart_toStartOf="@+id/signupNumber"
        app:layout_constraintTop_toBottomOf="@+id/signupPassword" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_with"
        android:textColor="@color/aqua"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        android:layout_width="152dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/whitebutton"
        android:drawableStart="@drawable/google"
        android:paddingStart="15dp"
        android:text="@string/google"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup"
        android:layout_width="200dp"
        android:layout_height="57dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/startbtn"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <TextView
        android:id="@+id/AlreadyHave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/already_have_account"
        android:textColor="@color/aqua"
        app:layout_constraintEnd_toEndOf="@+id/signup"
        app:layout_constraintStart_toStartOf="@+id/signup"
        app:layout_constraintTop_toBottomOf="@+id/signup" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/anta"
        android:text="@string/design_by_c_j"
        android:textAlignment="center"
        android:textColor="@color/brName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/signupName"
        android:layout_width="320dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext"
        android:drawableLeft="@drawable/baseline_person_add_alt_24"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:inputType="text"
        android:paddingStart="15dp"
        android:hint="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />


</androidx.constraintlayout.widget.ConstraintLayout>