<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/Background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/loginimg" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/aqua_supply"
        android:textColor="@color/aqua"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/anta"
        android:text="Login to Your Account"
        android:textColor="@color/brName"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/userNameEDT"
        android:layout_width="320dp"
        android:layout_height="52dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/edittext"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/passwordEdt"
        android:layout_width="320dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edittext"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/userNameEDT"
        app:layout_constraintStart_toStartOf="@+id/userNameEDT"
        app:layout_constraintTop_toBottomOf="@+id/userNameEDT" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Loginbtn"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/startbtn"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/passwordEdt"
        app:layout_constraintStart_toStartOf="@+id/passwordEdt"
        app:layout_constraintTop_toBottomOf="@+id/passwordEdt" />

    <TextView
        android:id="@+id/DontHaveAc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Don't Have Account?"
        android:textColor="@color/aqua"
        app:layout_constraintEnd_toEndOf="@+id/Loginbtn"
        app:layout_constraintStart_toStartOf="@+id/Loginbtn"
        app:layout_constraintTop_toBottomOf="@+id/Loginbtn" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/anta"
        android:text="@string/design_by_c_j"
        android:textAlignment="center"
        android:textColor="@color/brName"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />





</androidx.constraintlayout.widget.ConstraintLayout>